Finalisasi all components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,64 @@
     <string name="RB_Perempuan">Perempuan</string>
     <string name="Akun_title">Akun</string>
     <string name="personal_tite">Data Personal</string>
+
+    <string name="hapus_akun">Hapus Akun</string>
+    <string name="tinggi">Tinggi</string>
+    <string name="berat">Berat</string>
+    <string name="ubah_password">Ubah Password</string>
+    <string name="ulang_password_baru">Ulang Password Baru</string>
+    <string name="password_baru">Password Baru</string>
+    <string name="password_lama">Password Lama</string>
+    <string name="number_default">0.0</string>
+    <string name="lainnya">Lainnya</string>
+    <string name="hai_selamat_datang">Hai Selamat Datang</string>
+    <string name="nama_lengkap">Nama Lengkap</string>
+    <string name="tanggal_lahir">Tanggal Lahir</string>
+    <string name="ulangi_password">Ulangi Password</string>
+    <string name="sudah_punya_akun">Sudah punya akun?</string>
+    <string name="support_by">Support By</string>
+    <string name="nama_obat_default">IMBOOST FORCE 10 Kaplet</string>
+    <string name="jumlah_jual_default">Per Strip</string>
+    <string name="harga_default">80.000</string>
+    <string name="Rupiah">Rp.</string>
+    <string name="size_default">1</string>
+    <string name="informasi_umum">Informasi Umum</string>
+    <string name="desc_default">Obat ini adalah obat untuk menjaga stamina anda dalam beraktivitas untuk menjaga daya tahan tubuh</string>
+    <string name="peringatan_default">Peringatan</string>
+    <string name="perinagatan_default_txt">obat ini adalah obat untuk menjaga stamina anda dalam beraktivitas untuk menjaga daya tahan tubuh</string>
+    <string name="dosis">Dosis</string>
+    <string name="dosis_default">obat ini adalah obat untuk menjaga stamina anda dalam beraktivitas untuk menjaga daya tahan tubuh</string>
+    <string name="harga">Harga</string>
+    <string name="alamat">Alamat</string>
+    <string name="masukan_alamat">Masukan alamat</string>
+    <string name="catatan">Catatan</string>
+    <string name="berikan_catatan">Berikan Catatan</string>
+    <string name="metode_bayar">Metode Bayar</string>
+    <string name="dompet_digital">Dompet Digital</string>
+    <string name="tunai">Tunai</string>
+    <string name="dompet_default">RP 100.000</string>
+    <string name="pesan_sekarang">Pesan Sekarang</string>
+    <string name="hai_selamat_datang_kembali">Hai Selamat Datang Kembali</string>
+    <string name="masuk">Masuk</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="belum_punya_akun">Belum punya akun?</string>
+    <string name="daftar">Daftar</string>
+    <string name="supported_by">Supported By</string>
+    <string name="riwayat">Riwayat</string>
+    <string name="kedai_obat">Kedai Obat</string>
+    <string name="sapaan">Obat apa yang anda cari ?</string>
+    <string name="obat_default">IMBOOST FORCE 10 KAPLET</string>
+    <string name="tambah">Tambah</string>
+    <string name="jumlah_default">3</string>
+    <string name="dompet">Dompet</string>
+    <string name="top_up_cepat">Top Up Cepat</string>
+    <string name="rp_25_000">Rp. 25.000</string>
+    <string name="top_up">Top Up</string>
+    <string name="nominal">Nominal</string>
+    <string name="rp_50_000">Rp. 50.000</string>
+    <string name="rp_100_000">Rp. 100.000</string>
+    <string name="rp_200_000">Rp. 200.000</string>
+    <string name="rp_250_000">Rp. 250.000</string>
+    <string name="rp_300_000">Rp. 300.000</string>
 </resources>
